# objects-detector

./: CMakeLists.txt  main.cpp
models/ssd_mobilenet/: classes.txt
